tests/fixtures/language/v3/invalid/entities/unclosed-brace.allium
-- allium: 3

entity Foo {
    bar: String
